@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+13-Sep-2009 Hannes Papenberg
+ + Added Profile Plugin from experimental branch. This makes it possible to extend your user profile easily.
+
 13-Sep-2009 Gergo Erdosi
  ^ Replaced installation favicon.
  # [#18011] XML says category instead of categories
